# huawei_solar_rust

./: .gitignore  LICENSE  README.md
huawei_solar_cli/: Cargo.toml
huawei_solar_cli/src/: main.rs
huawei_solar_cli/src/logic/: mod.rs  params_parse.rs  pretty_print.rs
huawei_solar_rs/: Cargo.toml
huawei_solar_rs/src/: lib.rs  registers.rs
