[package]
name = "huawei_solar_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huawei_solar_rs = { path = "../huawei_solar_rs" }
clap = { version = "4.1.6", features = ["derive"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"